--- a/src/components/BlogWithCats/BlogWithCats.css
+++ b/src/components/BlogWithCats/BlogWithCats.css
@@ -12,10 +12,10 @@
     width: calc(100% - 490px); /* 避开左右两边猫娘 */
     min-height: 600px;
     height: auto;
-    padding: 20px;
     background: #2b2b2b;
     box-sizing: border-box;
     margin-bottom: 20px;
+    z-index: 10;
 }
 
 .neko {
